--- a/P2FixAnAppDotNetCode/P2FixAnAppDotNetCode.csproj
+++ b/P2FixAnAppDotNetCode/P2FixAnAppDotNetCode.csproj
@@ -41,6 +41,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="1.1.0" />
     <PackageReference Include="Microsoft.Extensions.Localization" Version="2.1.1" />
   </ItemGroup>
 
